--- a/config.json
+++ b/config.json
@@ -3,12 +3,12 @@
   "ownerName": "Riy",
   "botName": "Minato-Md",
   "footer": "Support By skysufers.xyz",
-  "youtube": "https://youtube.com/@riycoders",
+  "youtube": "https://youtube.com/@vicenziprst",
   "packname": "Created By",
-  "author": "@riycoders",
+  "author": "@Vicenzi",
   "donasi": {
-    "dana": "081575886399",
-    "gopay": "081575886399"
+    "dana": "081269734000",
+    "gopay": "081269734000"
   },
   "sessionName": "session",
   "pathimg": "./media/minato.jpg",
